# apps/api/marketops_schedule/__init__.py
@@ -4,7 +4,9 @@ from .deterministic import ScheduleFailure, bind_review_snapshot, build_wbs_draf
 from .service import (
     CreatePlanRequest,
     CreatePlanResult,
+    CreateApprovalResult,
     CreateScheduleResult,
+    PlanApproval,
     PlanReadModel,
     ScheduleAuditEvent,
     ScheduleRepository,
@@ -26,7 +28,9 @@ __all__ = [
     "revise_wbs",
     "CreatePlanRequest",
     "CreatePlanResult",
+    "CreateApprovalResult",
     "CreateScheduleResult",
+    "PlanApproval",
     "PlanReadModel",
     "ScheduleAuditEvent",
     "ScheduleRepository",
